typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts.stderr
error: Unexpected token Some(RParen)
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts:2:15
  |
2 | for (var of of) { }
  |               ^

